tests-integration/tests/roundtrip/invalid/syntax/malformed_line/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/malformed_line/01/input.essence:1:1:
  |
1 | a,a,b: int(1..3)
  | ^^^^^^^^^^^^^^^^
Skipped tokens

